[package]
name = "genawaiter2-macro"
version = "0.100.1"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Convenience macros for generators (genawaiter2)"
edition = "2018"
repository = "https://github.com/whatisaphone/genawaiter2"
readme = "../README.md"
keywords = ["generator", "yield", "coroutine", "async", "await"]
categories = ["asynchronous", "concurrency", "rust-patterns"]

[features]
strict = []
proc_macro = []
